--- a/style.css
+++ b/style.css
@@ -70,3 +70,13 @@ main::after {
   align-items: center;
   flex-wrap: wrap;
 }
+
+@media all and (max-width: 500px) {
+  main {
+    width: 300px;
+    height: 100px;
+  }
+  main h1 {
+    font-size: 3em;
+  }
+}
