--- a/style.css
+++ b/style.css
@@ -82,12 +82,14 @@ main::after {
   justify-content: center;
   align-items: center;
   font-weight: bold;
-  padding: 20px;
+  padding: 15px;
 }
 
-.button:hover p:hover {
+a.button:hover,
+p:hover {
   background-color: white;
   color: #0f9dfc;
+  border-radius: 100%;
 }
 
 @media all and (max-width: 500px) {
