--- a/style.css
+++ b/style.css
@@ -1,103 +1,81 @@
-* {
+body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: "Quicksand", sans-serif;
-  color: rgb(102, 101, 101);
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: #191938;
-}
-
-main {
+section {
+  height: 100vh;
   position: relative;
-  width: 450px;
-  height: 150px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #32324e;
-  overflow: hidden;
-  border-radius: 20px;
+  background: black;
 }
 
-main h1 {
-  position: relative;
-  color: white;
-  width: auto;
-  height: auto;
-  background-color: #191938;
-  font-size: 5em;
-  text-align: center;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  font-style: italic;
-  z-index: 10;
+section video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-main::before {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 320%;
-  background: linear-gradient(#da0707, #0f9dfc);
-  animation: animate 7s linear infinite;
+h1 {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-size: 5rem;
+    font-family: sans-serif; 
+    letter-spacing: 0.2rem;
+    text-shadow: 0 0 5px black;
 }
-main::after {
-  content: "";
-  position: absolute;
-  inset: 4px;
-  background: #191938;
-  border-radius: 16px;
+
+h1 span {
+    opacity: 0;
+    display: inline-block;
+    animation: animate 1s linear forwards;
 }
 
 @keyframes animate {
-  0% {
-    transform: rotate(0deg);
+  0%{
+    opacity: 0;
+    transform: rotateY(90deg);
+    filter: blur(10px);
   }
-  100% {
-    transform: rotate(360deg);
+  100%{
+    opacity: 1;
+    transform: rotateY(0deg);
+    filter: blue(0px);
   }
 }
 
-.socialbtn {
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  z-index: 11;
-  transform: translate(0px, 100px);
+h1 span:nth-child(1)
+{
+  animation-delay: .25s;
 }
-
-.button {
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  padding: 15px;
+h1 span:nth-child(2)
+{
+  animation-delay: .55s;
 }
-
-a.button:hover,
-p:hover {
-  background-color: white;
-  color: #0f9dfc;
-  border-radius: 100%;
+h1 span:nth-child(3)
+{
+  animation-delay: .75s;
 }
-
-@media all and (max-width: 500px) {
-  main {
-    width: 300px;
-    height: 100px;
-  }
-  main h1 {
-    font-size: 3em;
-  }
+h1 span:nth-child(4)
+{
+  animation-delay: 1s;
+}
+h1 span:nth-child(5)
+{
+  animation-delay: 1.25s;
+}
+h1 span:nth-child(6)
+{
+  animation-delay: 1.5s;
+}
+h1 span:nth-child(7)
+{
+  animation-delay: 2s;
 }
