--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
     font-size: 5rem;
     font-family: sans-serif; 
     letter-spacing: 0.2rem;
-    text-shadow: 0 0 5px black;
+    text-shadow: 5px 5px 5px black;
 }
 
 h1 span {
