--- a/style.css
+++ b/style.css
@@ -6,15 +6,17 @@ body {
 section {
   height: 100vh;
   position: relative;
-  background: black;
+  background: white;
 }
 
 section video {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  height: 65%;
+  animation-direction: reverse;
 }
 
 h1 {
@@ -28,7 +30,7 @@ h1 {
     max-width: 90%;
     text-align: center;
     color: white;
-    font-size: 5rem;
+    font-size: 7rem;
     font-family: sans-serif; 
     letter-spacing: 0.2rem;
     text-shadow: 5px 5px 5px black;
@@ -82,12 +84,60 @@ h1 span:nth-child(7)
   animation-delay: 2s;
 }
 
+header {
+  position: absolute;
+  top: calc(30% - 50px);
+  left: 50%;
+  transform: translateX(-50%);
+  width: 85%;
+  background: white;
+  z-index: 999;
+  display: flex;
+  justify-content: right;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-right: 1px;
+}
+
+nav ul li {
+  margin: 0 10px;
+  padding-right: 40px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: teal;
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding: 10px;
+}
+
+nav ul li a:hover {
+  background-color: white;
+  color: orange;
+  border-radius: 100%;
+}
+
 @media (max-width: 768px) {
   h1 {
-    font-size: 3.5rem; /* Adjust the value as needed */
+    font-size: 3rem; /* Adjust the value as needed */
     transform: translate(-50%, -50%);
     left: 50%;
     max-width: 100%;
     text-align: center;
+  }
+  section video {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+  }
+  header {
+    display: none;
   }
 }
