--- a/music-style.css
+++ b/music-style.css
@@ -1,5 +1,5 @@
 body {
-    color: rgba(255, 255, 255, 0.9);
+    color: rgba(255, 255, 255, .95);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 200;
     background: rgb(75,19,79);
@@ -18,9 +18,8 @@ img {
 }
 
 .spotlight {
-    background: rgb(75,19,79);
-    background: linear-gradient(23deg, rgba(75,19,79,1) 0%, rgba(211,111,214,1) 100%, rgba(34,34,34,1) 100%);
-    display: flex;
+    background: rgb(99,9,103);
+    background: linear-gradient(23deg, rgba(99,9,103,1) 0%, rgba(95,63,119,1) 100%, rgba(34,34,34,1) 100%);display: flex;
 }
 
 .bio {
@@ -128,7 +127,7 @@ h1 {
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     }
 
 .song-photo {
@@ -144,13 +143,20 @@ h1 {
     height: 50px;
 }
 
+.track-name {
+    padding-bottom: 10px;
+}
+
 .miniplayer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-grow: 1;
+    margin-left: -100px;
     margin-bottom: 0;
+    height: 72px;
+    width: 100%;
 }
 
 .controls {
@@ -161,7 +167,7 @@ h1 {
 .progress-bar-container {
     position: relative;
     width: 30%;
-    height: 10px;
+    height: 5px;
     border-radius: 25px;
     background: rgb(208, 205, 205, .8);
     margin-top: 10px;
@@ -181,54 +187,59 @@ h1 {
 
 #progress-bar {
     height: 100%;
-    background: rgb(1, 202, 1);
+    background: rgb(82,208,83);
     width: 0%;
     border-radius: 25px;
     transition: width 0.1s ease-in-out;
 }
 
-.current-time, .total-duration {
-    margin-left: 10px;
+.current-time {
+    position: absolute;
+    margin-right: 35%;
+    margin-top: 28px;
+}
+
+.total-duration {
+    position: absolute;
+    margin-left: 35%;
+    margin-top: 28px;
 }
 
 .time {
-    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .volume-container {
     position: absolute;
-    margin-left: 90%;
-    
+    margin-left: 80%;
+    margin-top: 50px;
 }
 
 .volume-slider-container {
-    display: none;
-    width: 6px;
-    height: 70px;
-    background-color: grey;
     position: absolute;
-    bottom: 100%;
-    left: 50%;
-}
-
-.volume-slider-visible {
     display: block;
+    width: 100px; /* Adjust the width as needed */
+    height: 6px;
+    background-color: grey;
+    bottom: 6px; /* Adjust the distance from the volume icon */
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .volume-slider {
     position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: white;
-    height: 70%;
-    pointer-events: none; /* Disable mouse events on the volume slider initially */
+    width: 60%;
+    height: 100%;
+    background-color: rgb(82, 208, 83);
+    pointer-events: none;
 }
 
 .volume-icon {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    margin-left: -40px; /* Half of the icon's width */
     cursor: pointer;
-}
-
-.volume-icon:hover + .volume-slider-container,
-.volume-slider-container:hover {
-    display: block;
 }
