--- a/style.css
+++ b/style.css
@@ -20,11 +20,13 @@ body {
   background: linear-gradient(29deg, rgba(2,0,36,1) 0%, rgba(71,26,128,1) 0%, rgba(92,51,142,1) 45%);
     color: #fff;
     font-size: 1.25rem;
+    font-weight: bold;
     text-transform: uppercase;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 5px 0;
+    /* z-index: 1; */
 }
 
 .logo {
@@ -50,12 +52,13 @@ body {
 .menu a {
     text-decoration: none;
     color: #fff;
-    transition: color 0.3s;
-    /* padding: 20px; */
+    transition: color 0.3s ease;
+    padding: 20px;
 }
 
 .menu a:hover {
   color: #ad4ad5;
+  cursor:pointer;
 }
 
 .hero {
@@ -86,11 +89,11 @@ body {
   top: 0;
   left: 0;
   width: 6500px;
-  height: 100%;
+  /* height: 80%;
+  margin-top: 10rem; */
   background: url('/media/clouds.png');
   opacity: 0.4;
   animation: scrollClouds 320s linear infinite;
-
 }
 
 @keyframes scrollClouds {
@@ -130,6 +133,13 @@ footer {
     font-size: 24px;
 }
 
+@media screen and (min-width: 767px) {
+  .clouds {
+    height: 80%; /* Adjust as needed */
+    margin-top: 10rem; /* Adjust as needed */
+  }
+}
+
 @media screen and (max-width: 766px) {
     .menu {
         display: none;
@@ -146,6 +156,11 @@ footer {
 
     .hero {
       position: fixed;
+    }
+
+    .clouds {
+      height: 100%;
+      margin-top: 0;
     }
 
     html, body, section {
