--- a/style.css
+++ b/style.css
@@ -72,17 +72,28 @@ body {
     justify-content: center;
     padding: 6rem 0 20px;
     overflow: hidden;
+    user-select: none;
 }
 
 .hero h1 {
   font-size: 4rem;
   margin-bottom: 1rem;
   text-transform: uppercase;
+  z-index: 2;
 }
+
+/* .hero h1:hover {
+  color: #ad4ad5;
+} */
 
 .hero p {
   font-size: 2.5rem;
+  z-index: 1;
 }
+
+/* .hero p:hover {
+  color: #ad4ad5;
+}  */
 
 .clouds {
   position: absolute;
@@ -131,6 +142,10 @@ footer {
 .social-links a {
     color: #fff;
     font-size: 24px;
+}
+
+.social-links a:hover {
+    color: #ad4ad5;
 }
 
 @media screen and (min-width: 767px) {
