--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body {
   font-size: 4rem;
   margin-bottom: 1rem;
   text-transform: uppercase;
-  z-index: 2;
+  /* z-index: 2; */
 }
 
 /* .hero h1:hover {
@@ -88,7 +88,7 @@ body {
 
 .hero p {
   font-size: 2.5rem;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 /* .hero p:hover {
