--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ body {
   display: none;
 }
 
+.mobile-menu-content.active {
+  display: block;
+  transition: transform 0.3s ease;
+  transform: translateY(0);
+}
+
 .menu {
   display: flex;
   list-style: none;
@@ -82,29 +88,23 @@ body {
   /* z-index: 2; */
 }
 
-/* .hero h1:hover {
-  color: #ad4ad5;
-} */
-
 .hero p {
   font-size: 2.5rem;
   /* z-index: 1; */
 }
-
-/* .hero p:hover {
-  color: #ad4ad5;
-}  */
 
 .clouds {
   position: absolute;
   top: 0;
   left: 0;
   width: 6500px;
-  /* height: 80%;
+  height: 100%;
+  /*
   margin-top: 10rem; */
   background: url('/media/clouds.png');
   opacity: 0.4;
   animation: scrollClouds 320s linear infinite;
+  z-index: -1;
 }
 
 @keyframes scrollClouds {
@@ -144,54 +144,12 @@ footer {
     font-size: 24px;
 }
 
-/* Mobile Menu */
-
-.overlay {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color:#804FB3;
-  overflow-x: hidden;
-  transition: 0.5s;
-}
-
-.overlay-content {
-  position: relative;
-  top: 25%;
-  width: 100%;
-  text-align: center;
-  margin-top: 30px;
-}
-
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-  color: #f1f1f1;
-}
-
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-}
-
-@media screen and (min-width: 767px) {
+/* @media screen and (min-width: 766px) {
   .clouds {
-    height: 80%; /* Adjust as needed */
-    margin-top: 10rem; /* Adjust as needed */
+    height: 80%; 
+    margin-top: 10rem; 
   }
-}
+} */
 
 @media screen and (max-width: 766px) {
     .menu {
@@ -209,39 +167,16 @@ footer {
 
     .hero {
       position: relative;
-      height: 80vh;
-      margin-top: -60px;
+      height: 80vh; /* 80? */
+      /* margin-top: -60px; */
 
-      
       overflow-y: hidden;
       overflow-x: hidden;
     }
 
-    .clouds {
-      height: 100%;
-      margin-top: 0;
-
-      
-      overflow-y: hidden;
-      overflow-x: hidden;
+    footer {
+      position: relative;
+      bottom: 0;
     }
 
-    html, body, section {
-      overflow-y: hidden;
-      overflow-x: hidden;
-  }
-
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
-
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
 }
