iframe shenanigans secrewing with responsive design

--- a/style.css
+++ b/style.css
@@ -83,6 +83,19 @@ body {
 
 .content-section p {
   padding: 1rem;
+  margin-bottom: 0;
+}
+
+.project-container {
+  position: relative;
+}
+
+.project-container iframe {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  border: none;
+  transform: scale(.7);
 }
 
 .hero {
