--- a/style.css
+++ b/style.css
@@ -115,6 +115,8 @@ body {
   color: purple;
   padding: 5px;
   font-size: 24px;
+  display: flex;
+  justify-content: right;
 }
 
 .preview img {
@@ -212,11 +214,11 @@ footer {
     }
 
     .mobile-menu {
-        display: block;
+        display: none;
     }
 
     .mobile-menu-content {
-      display: block;
+      display: none;
       cursor: pointer;
     }
 
