--- a/style.css
+++ b/style.css
@@ -103,6 +103,11 @@ body {
   flex: 1;
 }
 
+.column h3 {
+  text-align: center;
+  font-size: 2rem;
+}
+
 .column-left {
   order: 1;
 }
@@ -111,12 +116,17 @@ body {
   order: 2;
 }
 
+.preview {
+  flex-direction: row;
+  display: flex;
+  justify-content: right;
+  padding: .5rem;
+}
+
 .preview a i {
   color: purple;
   padding: 5px;
   font-size: 24px;
-  display: flex;
-  justify-content: right;
 }
 
 .preview img {
