--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .navbar-container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: .5rem;
+  padding: .25rem;
 }
 
 .navbar {
@@ -42,12 +42,6 @@ body {
 
 .mobile-menu-content {
   display: none;
-}
-
-.mobile-menu-content.active {
-  display: block;
-  transition: transform 0.3s ease;
-  transform: translateY(0);
 }
 
 .menu {
@@ -219,22 +213,48 @@ footer {
 } */
 
 @media screen and (max-width: 766px) {
-    .menu {
+    .desktop {
         display: none;
     }
 
+    .navbar-container {
+      padding: 1.1rem;
+    }
+
     .mobile-menu {
-        display: none;
+        display: block;
     }
 
     .mobile-menu-content {
       display: none;
-      cursor: pointer;
+      position: absolute;
+      top: 0; /* Position it just below the mobile menu button */
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* Add a shadow for a card-like effect */
+      z-index: 1; /* Ensure the menu is above other content */
+    }
+    
+    .mobile-menu-content.active {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 3rem;
+      /*position: absolute;  Use fixed positioning for full-height background */
+      background-color: #7f4fb3; /* Background color */
+    }
+
+    a {
+      color: white;
+      filter: drop-shadow(2px 2px 1px black);
+      font-size: 2rem;
     }
 
     .hero {
       position: relative;
-      height: 70vh; /* 80? */
+      height: 76vh;
       /* margin-top: -60px; */
 
       overflow-y: hidden;
