--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 3px 0;
-    /* z-index: 1; */
 }
 
 .mobile-menu {
@@ -78,16 +77,6 @@ body {
   margin-top: 1.5rem;
   z-index: 1;
 }
-
-/* #projects {
-  padding: 1rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  flex-direction: row;
-  width: 100%;
-  max-width: 1200px;
-} */
 
 .column {
   display: flex;
@@ -148,12 +137,10 @@ body {
   font-size: 4rem;
   margin-bottom: .75rem;
   text-transform: uppercase;
-  /* z-index: 2; */
 }
 
 .hero p {
   font-size: 2.5rem;
-  /* z-index: 1; */
 }
 
 .clouds {
@@ -205,13 +192,6 @@ footer {
     font-size: 24px;
 }
 
-/* @media screen and (min-width: 766px) {
-  .clouds {
-    height: 80%; 
-    margin-top: 10rem; 
-  }
-} */
-
 @media screen and (max-width: 766px) {
     .desktop {
         display: none;
@@ -228,12 +208,12 @@ footer {
     .mobile-menu-content {
       display: none;
       position: absolute;
-      top: 0; /* Position it just below the mobile menu button */
+      top: 0; 
       left: 0;
       width: 100%;
       height: 100vh;
-      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* Add a shadow for a card-like effect */
-      z-index: 1; /* Ensure the menu is above other content */
+      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
+      z-index: 1; 
     }
     
     .mobile-menu-content.active {
@@ -242,8 +222,7 @@ footer {
       align-items: center;
       justify-content: center;
       gap: 3rem;
-      /*position: absolute;  Use fixed positioning for full-height background */
-      background-color: #7f4fb3; /* Background color */
+      background-color: rgba(92,51,142,1); 
     }
 
     a {
@@ -255,7 +234,6 @@ footer {
     .hero {
       position: relative;
       height: 76vh;
-      /* margin-top: -60px; */
 
       overflow-y: hidden;
       overflow-x: hidden;
