--- a/m_style.css
+++ b/m_style.css
@@ -33,6 +33,12 @@ a {
 header {
     margin: 1rem;
 }
+
+.mobile-menu {
+    background-color: rgba(102, 23, 152, 0.733);
+    padding: .5rem;
+}
+
 .mobile-menu-content {
     display: none;
     position: absolute;
